[package]
name = "d_tran"
version = "0.1.0"
edition = "2024"

[dependencies]
arboard = "3.6.1"
eframe = "0.33.3"
egui = "0.33.3"
local-ip-address = "0.6.10"
notify-rust = "4.12.0"
rand = "0.10.0"
rfd = "0.17.2"
stunclient = "0.4.2"
tao = "0.34.5"
tray-icon = "0.21.3"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
windows = { version = "0.62.2", features = [
    "Win32_System_Com",
    "Win32_System_WinRT",
] }
